# Sequential-and-Parallel-Video-Segmenter

./: README.md
MPI-OpenMP/: CMakeLists.txt  paralelo.cpp
OpenMP/: CMakeLists.txt  openmp.cpp
Secuencial/: secuencial.cpp
